# webrtc

./: .gclient  .gitignore  BUILD.gn  LICENSE.pixiv  README.pixiv.en.md  README.pixiv.ja.md  README.pixiv.md
.github/workflows/: build.yml
api/: jsep.h  media_stream_interface.h  peer_connection_interface.h  rtc_error.h
api/stats/: rtc_stats.h  rtc_stats_report.h
api/video/: BUILD.gn  video_buffer.cc  video_buffer.h  video_rotation.h  video_stream_encoder_observer.h
api/video_codecs/test/: video_encoder_software_fallback_wrapper_unittest.cc
audio/: audio_send_stream.cc  audio_send_stream_unittest.cc
com/github/pixiv/webrtc/pixiv-webrtc/: maven-metadata.xml  (+2 more)
common_video/libyuv/: webrtc_libyuv.cc
common_video/libyuv/include/: webrtc_libyuv.h
examples/unity/Assets/: AudioSource.cs  Callbacks.cs  Initializer.cs  Main.cs  PeerConnectionCallbacks.cs  SoraCallbacks.cs  VideoTrackSource.cs
examples/unity/Assets/PeerConnection/: Client.cs  Connection.cs  CreateSessionDescriptionObserver.cs  DummySetSessionDescriptionObserver.cs  ICallbacks.cs  Message.cs  PeerConnection.asmdef  PeerConnectionObserver.cs
examples/unity/Assets/Scenes/: SampleScene.unity
examples/unity/Assets/Sora/: Connection.cs  CreateAnswerDescriptionObserver.cs  CreateOfferDescriptionObserver.cs  ICallbacks.cs  PeerConnectionObserver.cs  Role.cs  SetLocalDescriptionObserver.cs  SetRemoteDescriptionObserver.cs  Signals.cs  Sora.asmdef
examples/unity/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset
media/base/: video_adapter.cc
media/engine/: encoder_simulcast_proxy.h  simulcast_encoder_adapter.cc  simulcast_encoder_adapter.h  webrtc_video_engine.cc
modules/audio_coding/codecs/cng/: audio_encoder_cng_unittest.cc
modules/audio_coding/codecs/g711/: audio_encoder_pcm.cc
modules/audio_coding/codecs/g722/: audio_encoder_g722.cc
modules/audio_coding/codecs/ilbc/: audio_encoder_ilbc.cc
modules/audio_coding/codecs/isac/: audio_encoder_isac_t.h  audio_encoder_isac_t_impl.h
modules/audio_coding/codecs/opus/: audio_encoder_multi_channel_opus_impl.cc
modules/audio_coding/codecs/red/: audio_encoder_copy_red_unittest.cc
modules/audio_device/android/: opensles_recorder.cc
modules/desktop_capture/win/: dxgi_output_duplicator.cc
modules/video_coding/codecs/vp9/: vp9_impl.cc
p2p/: BUILD.gn
p2p/base/: port.cc  port_allocator.h  turn_port.cc  turn_server.cc  turn_server.h
rtc_base/: BUILD.gn  virtual_socket_server.cc
sdk/: BUILD.gn  c_headers_test.c
sdk/android/: BUILD.gn
sdk/c/: BUILD.gn  common_video.cc  interop.cc  interop.h  media.cc  rtc_base.cc  string.cc
sdk/c/api/: BUILD.gn  async_resolver_factory.h  audio.h  audio_codecs.cc  audio_codecs.h  candidate.cc  candidate.h  create_peerconnection_factory.cc  create_peerconnection_factory.h  create_turn_server.cc  create_turn_server.h  data_channel_interface.cc  data_channel_interface.h  jsep.cc  jsep.h  media_stream_interface.cc  media_stream_interface.h  peer_connection_interface.cc  peer_connection_interface.h  rtc_error.cc  rtc_error.h  rtp_receiver_interface.cc  rtp_receiver_interface.h  rtp_sender_interface.cc  rtp_sender_interface.h  rtp_transceiver_interface.cc  rtp_transceiver_interface.h  video_codecs.cc  video_codecs.h
sdk/c/api/video/: BUILD.gn  color_space.h  i420_buffer.cc  i420_buffer.h  video_bitrate_allocator_factory.h  video_buffer.cc  video_buffer.h  video_frame.cc  video_frame.h  video_frame_buffer.cc  video_frame_buffer.h  video_rotation.h  video_sink_interface.cc  video_sink_interface.h
sdk/c/common_video/: BUILD.gn  libyuv.cc  libyuv.h
sdk/c/media/: BUILD.gn
sdk/c/media/base/: adapted_video_track_source.cc  adapted_video_track_source.h  media_engine.cc  media_engine.h  video_adapter.h
sdk/c/modules/: BUILD.gn  audio_device.h  audio_processing.cc  audio_processing.h
sdk/c/p2p/: BUILD.gn  base.h
sdk/c/rtc_base/: BUILD.gn  message_queue.cc  message_queue.h  rtc_certificate.h  rtc_certificate_generator.h  ssl_certificate.h  thread.cc  thread.h
sdk/dotnet/unity/: package.json  unity.msbuildproj
sdk/dotnet/unity/Editor/: AssemblyInfo.cs  Processor.cs  Webrtc.Editor.asmdef
sdk/dotnet/webrtc/: common_video.cs  dll.cs  interop.cs  modules.cs  p2p.cs  rtc_base.cs  webrtc.csproj
sdk/dotnet/webrtc/api/: async_resolver_factory.cs  audio.cs  audio_codecs.cs  candidate.cs  create_peerconnection_factory.cs  create_turn_server.cs  data_channel_interface.cs  jsep.cs  jsep_dc.cs  media_stream_interface.cs  media_types.cs  peer_connection_interface.cs  rtc_databuffer.cs  rtc_error.cs  rtp_receiver_interface.cs  rtp_sender_interface.cs  rtp_transceiver_interface.cs  video_bitrate_allocator_factory.cs  video_codecs.cs
sdk/objc/api/peerconnection/: RTCAudioDeviceModule+Private.h  RTCAudioDeviceModule.h  RTCAudioDeviceModule.mm  RTCPeerConnectionFactory.h  RTCPeerConnectionFactory.mm
sdk/objc/components/audio/: RTCAudioSession+Configuration.mm  RTCAudioSession+Private.h  RTCAudioSession.h  RTCAudioSession.mm  RTCAudioSessionConfiguration.m
sdk/objc/native/src/: objc_video_track_source.mm
stats/: rtc_stats.cc
tools_webrtc/libs/: generate_licenses.py  json2licenses.py
tools_webrtc/unity/: generate_licenses.py
unity/Assets/: Main.cs
unity/Assets/Scenes/: SampleScene.unity
unity/Assets/Sora/: Connection.cs  CreateAnswerDescriptionObserver.cs  CreateOfferDescriptionObserver.cs  ICallbacks.cs  PeerConnectionObserver.cs  Role.cs  SetLocalDescriptionObserver.cs  SetRemoteDescriptionObserver.cs  Signals.cs
unity/Assets/webrtc/: common_video.cs  media.cs  rtc_base.cs  string.cs  webrtc.asmdef
unity/Assets/webrtc/api/: audio_codecs.cs  create_peerconnection_factory.cs  data_channel_interface.cs  jsep.cs  media_stream_interface.cs  media_types.cs  peer_connection_interface.cs  rtc_error.cs  rtp_receiver_interface.cs  rtp_sender_interface.cs  rtp_transceiver_interface.cs  video_codecs.cs
video/: send_statistics_proxy.cc  send_statistics_proxy_unittest.cc  video_quality_test.cc  video_send_stream_tests.cc  video_stream_encoder.cc
(+31 files in other folders)
