# Copyright 2019 pixiv Inc. All Rights Reserved.
#
# Use of this source code is governed by a license that can be
# found in the LICENSE.pixiv file in the root of the source tree.

import("../../webrtc.gni")

rtc_source_set("c") {
  sources = [
    "interop.cc",
  ]
  deps = [
    "api:audio_codecs",
    "api:create_peerconnection_factory",
    "api:libjingle_peerconnection_api",
    "api:video_codecs",
    "api/video:video_frame",
    "api/video:video_frame_i420",
    "api/video:video_rtp_headers",
    "common_video",
    "media",
    "modules",
    "p2p",
    "rtc_base",
  ]
}
