# Copyright 2019 pixiv Inc. All Rights Reserved.
#
# Use of this source code is governed by a license that can be
# found in the LICENSE.pixiv file in the root of the source tree.

import("../../../webrtc.gni")

group("modules") {
  deps = [
    ":audio_device",
    ":audio_processing",
  ]
}

rtc_source_set("audio_device") {
  sources = [
    "audio_device.h",
  ]
  deps = [
    "../../../modules/audio_device",
  ]
}

rtc_source_set("audio_processing") {
  sources = [
    "audio_processing.cc",
    "audio_processing.h",
  ]
  deps = [
    "../../../modules/audio_processing",
  ]
}
