# Copyright 2019 pixiv Inc. All Rights Reserved.
#
# Use of this source code is governed by a license that can be
# found in the LICENSE.pixiv file in the root of the source tree.

import("../../../webrtc.gni")

group("p2p") {
  public_deps = [
    ":rtc_p2p",
  ]
}

rtc_source_set("rtc_p2p") {
  sources = [
    "base.h",
  ]
  deps = [
    "../../../p2p:rtc_p2p",
  ]
}
