# Copyright 2019 pixiv Inc. All Rights Reserved.
#
# Use of this source code is governed by a license that can be
# found in the LICENSE.pixiv file in the root of the source tree.

import("../../../../webrtc.gni")

rtc_source_set("video_rtp_headers") {
  sources = [
    "color_space.h",
    "video_rotation.h",
  ]
  deps = [
    "../../../../api/video:video_rtp_headers",
  ]
}

rtc_source_set("video_frame") {
  sources = [
    "video_buffer.cc",
    "video_buffer.h",
    "video_frame.cc",
    "video_frame.h",
    "video_frame_buffer.cc",
    "video_frame_buffer.h",
    "video_sink_interface.cc",
    "video_sink_interface.h",
  ]
  deps = [
    "../../../../api/video:video_frame",
  ]
}

rtc_source_set("video_frame_i420") {
  sources = [
    "i420_buffer.cc",
    "i420_buffer.h",
  ]
  deps = [
    "../../../../api/video:video_frame_i420",
  ]
}
